He ampliado el menu y he añadido los enlaces de las diferentes paginas

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="menu">
-        <a href="#inicio">Inicio</a>
-        <a href="#noticias">Noticias</a>
-        <a href="#contacto">Contacto</a>
-        <a href="#sobre nosotros">Sobre nosotros</a>
+        <a href="Inicio/index.html" target="_blank">Inicio</a>
+        <a href="Noticias/index.html" target="_blank">Noticias</a>
+        <a href="Contacto/index.html" target="_blank">Contacto</a>
+        <a href="Campeonatos/index.html" target="_blank">Campeonatos</a>
+        <a href="Licencias/index.html" target="_blank">Licencias</a>
+        <a href="Circuitos/index.html" target="_blank">Circuitos</a>
     </div>
     <div></div>
     <div></div>
