Añadiendo parte del contenido y estilos a las diferentes paginas

--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -7,6 +7,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    Aqui esta nuestro contacto
+    <h1>Contacto</h1>
+    <p>En este apartado apareceran las diferentes vias de conacto para mas informacion</p>
 </body>
 </html>
