--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -7,6 +7,8 @@
     <title>Inicio</title>
 </head>
 <body>
-    Este es el inicio
+    <h1>Inicio</h1>
+
+    <p>Esta pagina va a proporcionar informacion general del karting y tambien informacion sobre los campeonatos, las licencias necesarias para disputarlos y los circuitos en los que se disputaran</p>
 </body>
 </html>
