--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -7,6 +7,7 @@
     <title>Noticias</title>
 </head>
 <body>
-    Aqui apareceran las ultimas noticias
+    <h1>Noticias</h1>
+    <p>En este apartado iran aparaciendo noticias sobre los campeonatos, circuitos y las pruebas que se iran realizando para mantenernos informados de todos los detalles</p>
 </body>
 </html>
