Nuevos en todas las carpetas

--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Contacto</h1>
+    <div class="menu">
+        <a href="../Inicio/index.html" target="_blank">Inicio</a>
+        <a href="../Noticias/index.html" target="_blank">Noticias</a>
+        <a href="../Contacto/index.html" target="_blank">Contacto</a>
+        <a href="../Campeonatos/index.html" target="_blank">Campeonatos</a>
+        <a href="../Licencias/index.html" target="_blank">Licencias</a>
+        <a href="../Circuitos/index.html" target="_blank">Circuitos</a>
+    </div>
     <p>En este apartado apareceran las diferentes vias de conacto para mas informacion</p>
 </body>
 </html>
