--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Circuitos</title>
 </head>
 <body>
+    <div class="menu">
+        <a href="../Inicio/index.html" target="_blank">Inicio</a>
+        <a href="../Noticias/index.html" target="_blank">Noticias</a>
+        <a href="../Contacto/index.html" target="_blank">Contacto</a>
+        <a href="../Campeonatos/index.html" target="_blank">Campeonatos</a>
+        <a href="../Licencias/index.html" target="_blank">Licencias</a>
+        <a href="../Circuitos/index.html" target="_blank">Circuitos</a>
+    </div>
+    </div>
     Aqui hablaremos sobre los ciruitos en los que se disputaran las diferentes pruebas
 </body>
 </html>
