--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Inicio</title>
 </head>
 <body>
-    <h1>Inicio</h1>
-
+    <div class="menu">
+        <a href="../Inicio/index.html" target="_blank">Inicio</a>
+        <a href="../Noticias/index.html" target="_blank">Noticias</a>
+        <a href="../Contacto/index.html" target="_blank">Contacto</a>
+        <a href="../Campeonatos/index.html" target="_blank">Campeonatos</a>
+        <a href="../Licencias/index.html" target="_blank">Licencias</a>
+        <a href="../Circuitos/index.html" target="_blank">Circuitos</a>
+    </div>
     <p>Esta pagina va a proporcionar informacion general del karting y tambien informacion sobre los campeonatos, las licencias necesarias para disputarlos y los circuitos en los que se disputaran</p>
 </body>
 </html>
