Añadiendo el responsive y el footer

--- a/Licencias/index.html
+++ b/Licencias/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <div class="menu">
-        <a href="../Inicio/index.html" target="_blank">Inicio</a>
-        <a href="../Noticias/index.html" target="_blank">Noticias</a>
-        <a href="../Contacto/index.html" target="_blank">Contacto</a>
-        <a href="../Campeonatos/index.html" target="_blank">Campeonatos</a>
-        <a href="../Licencias/index.html" target="_blank">Licencias</a>
-        <a href="../Circuitos/index.html" target="_blank">Circuitos</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../Noticias/index.html">Noticias</a>
+        <a href="../Contacto/index.html">Contacto</a>
+        <a href="../Campeonatos/index.html">Campeonatos</a>
+        <a href="../Licencias/index.html" class="activa">Licencias</a>
+        <a href="../Circuitos/index.html">Circuitos</a>
     </div>
-    Aqui hablaremos sobre las diferentes licencias y sus precios
+    <div class="contenido">
+        Aqui hablaremos sobre las diferentes licencias y sus precios
+    </div>
+    <div class="footer">
+        Aviso legal  Privacidad y uso de cookies
+    </div>
 </body>
 </html>
