--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Inicio</title>
 </head>
 <body>
-    <div class="menu">
-        <a href="Inicio/index.html" target="_blank">Inicio</a>
-        <a href="Noticias/index.html" target="_blank">Noticias</a>
-        <a href="Contacto/index.html" target="_blank">Contacto</a>
-        <a href="Campeonatos/index.html" target="_blank">Campeonatos</a>
-        <a href="Licencias/index.html" target="_blank">Licencias</a>
-        <a href="Circuitos/index.html" target="_blank">Circuitos</a>
+    <div class="menu" id="menu">
+        <a href="index.html" class="activa">Inicio</a>
+        <a href="Noticias/index.html">Noticias</a>
+        <a href="Contacto/index.html">Contacto</a>
+        <a href="Campeonatos/index.html">Campeonatos</a>
+        <a href="Licencias/index.html">Licencias</a>
+        <a href="Circuitos/index.html">Circuitos</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="contenido"></div>
+    <div class="footer">
+        Aviso legal  Privacidad y uso de cookies
+    </div>
+
+    <script src="js/javascript.js"></script>
+    
 </body>
 </html>
