--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <div class="menu">
-        <a href="../Inicio/index.html" target="_blank">Inicio</a>
-        <a href="../Noticias/index.html" target="_blank">Noticias</a>
-        <a href="../Contacto/index.html" target="_blank">Contacto</a>
-        <a href="../Campeonatos/index.html" target="_blank">Campeonatos</a>
-        <a href="../Licencias/index.html" target="_blank">Licencias</a>
-        <a href="../Circuitos/index.html" target="_blank">Circuitos</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../Noticias/index.html">Noticias</a>
+        <a href="../Contacto/index.html" class="activa">Contacto</a>
+        <a href="../Campeonatos/index.html">Campeonatos</a>
+        <a href="../Licencias/index.html">Licencias</a>
+        <a href="../Circuitos/index.html">Circuitos</a>
     </div>
-    <p>En este apartado apareceran las diferentes vias de conacto para mas informacion</p>
+    <div class="contenido">
+        <p>En este apartado apareceran las diferentes vias de conacto para mas informacion</p>
+    </div>
+    <div class="footer">
+        Aviso legal  Privacidad y uso de cookies
+    </div>
 </body>
 </html>
