Añadiendo informacion a la pagina

--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -16,7 +16,8 @@
         <a href="../Circuitos/index.html">Circuitos</a>
     </div>
     <div class="contenido">
-        <p>En este apartado apareceran las diferentes vias de conacto para mas informacion</p>
+        <p>Telefono: 123 456 789</p>
+        <p>Email: nebredaracingteam@gmail.com</p>
     </div>
     <div class="footer">
         Aviso legal  Privacidad y uso de cookies
