--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-    <div class="contenido"></div>
+    <div class="contenido">
+        <h1 class="bienvenida">Bienvenido al equipo de karting Nebreda Racing Team</h1>
+        <p>Para contactar con nosotros, ve al menu de Contactos. Alli encontraras todas las formas de contacto</p>
+    </div>
     <div class="footer">
-        Aviso legal  Privacidad y uso de cookies
+         Aviso legal | Privacidad | Cookies
     </div>
 
     <script src="js/javascript.js"></script>
