Añadiendo mas informacion

--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -16,7 +16,11 @@
         <a href="../Circuitos/index.html">Circuitos</a>
     </div>
     <div class="contenido">
-        Aqui hablaremos de los diferentes campeonatos
+        <ul>Los campeonatos en los que competimos son:
+            <li>CKCL: Campeonato de Karting de Castilla y Leon</li>
+            <li>CMK: Campeonato Madrileño de Karting</li>
+            <li>CEK: Campeonato de España de Karting</li>
+        </ul>
     </div>
     <div class="footer">
         Aviso legal  Privacidad y uso de cookies
