--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         </a>
     </div>
     <div class="contenido">
-        <h1 class="bienvenida">Bienvenido al equipo de karting Nebreda Racing Team</h1>
-        <p>Para contactar con nosotros, ve al menu de Contactos. Alli encontraras todas las formas de contacto</p>
+        <h1 class="bienvenida">Bienvenido a Nebreda Racing Team</h1>
     </div>
     <div class="footer">
          Aviso legal | Privacidad | Cookies
