He añadido un formulario de contacto y he cambiado al footer el numero de telefono y el correo

--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -19,7 +19,7 @@
         Aqui hablaremos sobre los ciruitos en los que se disputaran las diferentes pruebas
     </div>
     <div class="footer">
-        Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 </body>
 </html>
