--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -16,11 +16,28 @@
         <a href="../Circuitos/index.html">Circuitos</a>
     </div>
     <div class="contenido">
-        <p>Telefono: 123 456 789</p>
-        <p>Email: nebredaracingteam@gmail.com</p>
+        <form class="contacto" method="post">
+            <fieldset>
+                <legend>Formulario de contacto</legend><br>
+                <label>Nombre:</label>
+                <input type="text"><br><br>
+                <label>Telefono:</label>
+                <input type="number"><br><br>
+                <label>Correo electronico:</label>
+                <input type="email"><br><br>
+                <label>Elija su ciudad:</label>
+                <select name="Poblacion">
+                    <option value="Madrid">Madrid</option>
+                    <option value="Valladolid">Valladolid</option>
+                    <option value="Zaragoza">Zaragoza</option>
+                </select><br><br>
+                <textarea>Introducza algo mas que quiera contarnos</textarea><br><br>
+                <input type="submit"><br><br>
+            </fieldset>
+        </form>
     </div>
     <div class="footer">
-        Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 </body>
 </html>
