--- a/Licencias/index.html
+++ b/Licencias/index.html
@@ -19,7 +19,7 @@
         Aqui hablaremos sobre las diferentes licencias y sus precios
     </div>
     <div class="footer">
-        Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 </body>
 </html>
