--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -19,7 +19,7 @@
         <p>En este apartado iran aparaciendo noticias sobre los campeonatos, circuitos y las pruebas que se iran realizando para mantenernos informados de todos los detalles</p>
     </div>
     <div class="footer">
-        Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 </body>
 </html>
