--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="bienvenida">Bienvenido a Nebreda Racing Team</h1>
     </div>
     <div class="footer">
-         Aviso legal | Privacidad | Cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 
     <script src="js/javascript.js"></script>
