--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -16,14 +16,14 @@
         <a href="../Circuitos/index.html">Circuitos</a>
     </div>
     <div class="contenido">
-        <ul>Los campeonatos en los que competimos son:
+        <ul>Los campeonatos en los que competimos son:<br><br>
             <li>CKCL: Campeonato de Karting de Castilla y Leon</li>
             <li>CMK: Campeonato Madrileño de Karting</li>
             <li>CEK: Campeonato de España de Karting</li>
         </ul>
     </div>
     <div class="footer">
-        Aviso legal  Privacidad y uso de cookies
+        Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 </body>
 </html>
