--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -17,7 +17,9 @@
     </div>
     <div class="contenido">
         <form class="contacto" method="post">
+           
             <fieldset>
+                <div class="formulario">
                 <legend>Formulario de contacto</legend><br>
                 <label>Nombre:</label>
                 <input type="text"><br><br>
@@ -33,6 +35,7 @@
                 </select><br><br>
                 <textarea>Introducza algo mas que quiera contarnos</textarea><br><br>
                 <input type="submit"><br><br>
+            </div>
             </fieldset>
         </form>
     </div>
