He añadido los logos de los diferentes campeonatos

--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -22,6 +22,11 @@
             <li>CEK: Campeonato de España de Karting</li>
         </ul>
     </div>
+    <div class="imagenes">
+        <img src="logoCKCL.png" id="CKCL">
+        <img src="logoCMK.png" id="CMK">
+        <img src="logoCEK.jpg" id="CEK">
+    </div>
     <div class="footer">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
