He añadido otra lista en Campeonatos

--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -17,7 +17,19 @@
     </div>
     <div class="contenido">
         <ul>Los campeonatos en los que competimos son:<br><br>
-            <li>CKCL: Campeonato de Karting de Castilla y Leon</li>
+            <li>CKCL: Campeonato de Karting de Castilla y Leon:
+                <p>El campeonato de Karting de Castilla y Leon es una competicion que reune pilotos de la propia comunidad y algunos de otras comunidades. Estos pilotos compiten en 5 circuitos que se encuentran dentro de la misma.
+                   Estos pilotos se dividen en categorias y esas categorias se clasifican por la edad. Las categorias son las siguientes:
+                   <ul>
+                    <li>PRE-ROOKIE: Edad minima de 5 años</li>
+                    <li>ROOKIE: Edad minima de 6</li>
+                    <li>MINI: Edad minima de 8</li>
+                    <li>JUNIOR: Edad minima de 12</li>
+                    <li>SENIOR: Edad minima de 16</li>
+                    <li>KZ: Edad minima de 18</li>
+                   </ul>
+                </p>
+            </li>
             <li>CMK: Campeonato Madrileño de Karting</li>
             <li>CEK: Campeonato de España de Karting</li>
         </ul>
