--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
     <title>Circuitos</title>
 </head>
@@ -14,6 +15,9 @@
         <a href="../Campeonatos/index.html">Campeonatos</a>
         <a href="../Licencias/index.html">Licencias</a>
         <a href="../Circuitos/index.html" class="activa">Circuitos</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
     <div class="contenido">
         Aqui hablaremos sobre los ciruitos en los que se disputaran las diferentes pruebas
@@ -21,5 +25,7 @@
     <div class="footer">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
+
+    <script src="../js/javascript.js"></script>
 </body>
 </html>
