--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -14,6 +14,9 @@
         <a href="../Campeonatos/index.html">Campeonatos</a>
         <a href="../Licencias/index.html">Licencias</a>
         <a href="../Circuitos/index.html">Circuitos</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
     <div class="contenido">
         <p>En este apartado iran aparaciendo noticias sobre los campeonatos, circuitos y las pruebas que se iran realizando para mantenernos informados de todos los detalles</p>
@@ -21,5 +24,7 @@
     <div class="footer">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
+
+    <script src="../js/javascript.js"></script>
 </body>
 </html>
