--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
     <title>Contacto</title>
 </head>
@@ -14,6 +15,9 @@
         <a href="../Campeonatos/index.html">Campeonatos</a>
         <a href="../Licencias/index.html">Licencias</a>
         <a href="../Circuitos/index.html">Circuitos</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
     <div class="contenido">
         <form class="contacto" method="post">
@@ -33,7 +37,7 @@
                     <option value="Valladolid">Valladolid</option>
                     <option value="Zaragoza">Zaragoza</option>
                 </select><br><br>
-                <textarea>Introducza algo mas que quiera contarnos</textarea><br><br>
+                <textarea cols="65" rows="20">Introducza algo mas que quiera contarnos</textarea><br><br>
                 <input type="submit"><br><br>
             </div>
             </fieldset>
@@ -42,5 +46,7 @@
     <div class="footer">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
+
+    <script src="../js/javascript.js"></script>
 </body>
 </html>
