--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -22,7 +22,8 @@
     <div class="contenido">
         <ul>Los campeonatos en los que competimos son:<br><br>
             <li>CKCL: Campeonato de Karting de Castilla y Leon:
-                <p>El campeonato de Karting de Castilla y Leon es una competicion que reune pilotos de la propia comunidad y algunos de otras comunidades. Estos pilotos compiten en 5 circuitos que se encuentran dentro de la misma.
+                <p>El Campeonato de Karting de Castilla y Leon es una competicion que reune pilotos de la propia comunidad y algunos de
+                   otras comunidades. Estos pilotos compiten en 5 circuitos que se encuentran dentro de la misma.
                    Estos pilotos se dividen en categorias y esas categorias se clasifican por la edad. Las categorias son las siguientes:
                    <ul>
                     <li>PRE-ROOKIE: Edad minima de 5 años</li>
@@ -34,7 +35,9 @@
                    </ul>
                 </p>
             </li>
-            <li>CMK: Campeonato Madrileño de Karting</li>
+            <li>CMK: Campeonato Madrileño de Karting:
+                <p>El Campeonato Madrileño de Karting se disputa en circuitos de otras comunidades debido a que en la comunidad de Madrid no hay circuitos con condiciones para competir</p>
+            </li>
             <li>CEK: Campeonato de España de Karting</li>
         </ul>
         <div class="imagenes">
