Mas informacion y logo actualizado

--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -37,6 +37,17 @@
             </li>
             <li>CMK: Campeonato Madrileño de Karting:
                 <p>El Campeonato Madrileño de Karting se disputa en circuitos de otras comunidades debido a que en la comunidad de Madrid no hay circuitos con condiciones para competir</p>
+            <ul>
+                <li>MINIMAX:</li>
+                <li>MINICEK:</li>
+                <li>JUNIOR-ROTAX:</li>
+                <li>SENIOR-ROTAX:</li>
+                <li>SENIOR-X30:</li>
+                <li>DD2:</li>
+                <li>DD2-MASTER:</li>
+                <li>KZ:</li>
+                <li>ZK-2:</li>
+            </ul>
             </li>
             <li>CEK: Campeonato de España de Karting</li>
         </ul>
