He añadido el logo a la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 
+    <img src="LogoFondoNegro.jpeg">
+
     <script src="js/javascript.js"></script>
     
 </body>
