Terminando la pagina Campeonatos

--- a/Campeonatos/index.html
+++ b/Campeonatos/index.html
@@ -21,35 +21,45 @@
     </div>
     <div class="contenido">
         <ul>Los campeonatos en los que competimos son:<br><br>
-            <li>CKCL: Campeonato de Karting de Castilla y Leon:
+            <li id="CKCL">CKCL: Campeonato de Karting de Castilla y Leon:
                 <p>El Campeonato de Karting de Castilla y Leon es una competicion que reune pilotos de la propia comunidad y algunos de
                    otras comunidades. Estos pilotos compiten en 5 circuitos que se encuentran dentro de la misma.
-                   Estos pilotos se dividen en categorias y esas categorias se clasifican por la edad. Las categorias son las siguientes:
+                   Estos pilotos se dividen en categorias y esas categorias se clasifican por la edad. Las categorias son las siguientes:</p>
                    <ul>
-                    <li>PRE-ROOKIE: Edad minima de 5 años</li>
-                    <li>ROOKIE: Edad minima de 6 años</li>
-                    <li>MINI: Edad minima de 8 años</li>
-                    <li>JUNIOR: Edad minima de 12 años</li>
-                    <li>SENIOR: Edad minima de 16 años</li>
-                    <li>KZ: Edad minima de 18 años </li>
+                        <li>PRE-ROOKIE: Edad minima de 5 años</li>
+                        <li>ROOKIE: Edad minima de 6 años</li>
+                        <li>MINI: Edad minima de 8 años</li>
+                        <li>JUNIOR: Edad minima de 12 años</li>
+                        <li>SENIOR: Edad minima de 16 años</li>
+                        <li>KZ: Edad minima de 18 años </li>
                    </ul>
-                </p>
-            </li>
-            <li>CMK: Campeonato Madrileño de Karting:
+            </li><br>
+            <li id="CMK">CMK: Campeonato Madrileño de Karting:
                 <p>El Campeonato Madrileño de Karting se disputa en circuitos de otras comunidades debido a que en la comunidad de Madrid no hay circuitos con condiciones para competir</p>
-            <ul>
-                <li>MINIMAX:</li>
-                <li>MINICEK:</li>
-                <li>JUNIOR-ROTAX:</li>
-                <li>SENIOR-ROTAX:</li>
-                <li>SENIOR-X30:</li>
-                <li>DD2:</li>
-                <li>DD2-MASTER:</li>
-                <li>KZ:</li>
-                <li>ZK-2:</li>
-            </ul>
+                    <ul>
+                        <li>MINIMAX: Edad minima de 8 años</li>
+                        <li>MINICEK: Edad minima de 8 años</li>
+                        <li>JUNIOR-ROTAX: Edad minima de 14 años</li>
+                        <li>SENIOR-ROTAX: Edad minima de 16 años</li>
+                        <li>SENIOR-X30: Edad minima de 16 años</li>
+                        <li>DD2: Edad minima de 18 años</li>
+                        <li>DD2-MASTER: Edad minima de 30 años</li>
+                        <li>KZ: Edad minima de 18 años</li>
+                        <li>ZK-2: Edad minima de 18 años</li>
+                    </ul>
+            </li><br>
+            <li id="CEK">CEK: Campeonato de España de Karting:
+                <p>Este campeonato es el de mayor nivel en cuanto a competicion dentro del pais. Principalmente es para pilotos españoles pero tambien pueden competir pilotos de otras nacionalidades. Este campeonato ya se realiza en circuitos internacionales como el de Zuera o Motorland entre otros</p>
+                    <ul>
+                        <li>ACADEMY: Edad minima de 6 años</li>
+                        <li>MINI: Edad minima de 9 años</li>
+                        <li>MINI-ROOKIE: Edad minima de 8 años</li>
+                        <li>JUNIOR: Edad minima de 14 años</li>
+                        <li>SENIOR: Edad minima de 16 años</li>
+                        <li>KZ: Edad minima de 18 años</li>
+                        <li>KZ-2: Edad minima de 18 años</li>
+                    </ul>
             </li>
-            <li>CEK: Campeonato de España de Karting</li>
         </ul>
         <div class="imagenes">
             <img src="logoCKCL.png" id="CKCL">
