--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -7,7 +7,7 @@
     <title>Noticias</title>
 </head>
 <body>
-    <div class="menu">
+    <div class="menu"  id="menu">
         <a href="../index.html">Inicio</a>
         <a href="../Noticias/index.html" class="activa">Noticias</a>
         <a href="../Contacto/index.html">Contacto</a>
