--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -8,7 +8,7 @@
     <title>Circuitos</title>
 </head>
 <body>
-    <div class="menu">
+    <div class="menu" id="menu">
         <a href="../index.html">Inicio</a>
         <a href="../Noticias/index.html">Noticias</a>
         <a href="../Contacto/index.html">Contacto</a>
