--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -8,7 +8,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    <div class="menu">
+    <div class="menu" id="menu">
         <a href="../index.html">Inicio</a>
         <a href="../Noticias/index.html">Noticias</a>
         <a href="../Contacto/index.html" class="activa">Contacto</a>
