Empezando a introducir los circuitos en la pagina Circuitos

--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="menu" id="menu">
+        <img src="../LogoFondoNegro.jpeg">
         <a href="../index.html">Inicio</a>
         <a href="../Noticias/index.html">Noticias</a>
         <a href="../Contacto/index.html">Contacto</a>
@@ -20,7 +21,19 @@
         </a>
     </div>
     <div class="contenido">
-        Aqui hablaremos sobre los ciruitos en los que se disputaran las diferentes pruebas
+        <p>Estos son los circuitos elegidos este 2024 para disputar los diferentes campeonatos:</p>
+        <ul>
+            <li>CKCL:</li>
+                <ul>
+                    <li>Cabañas Raras (Leon)</li>
+                    <li>Masquekarting (Burgos)</li>
+                    <li>El Silvar (Leon)</li>
+                    <li>Kotarr (Burgos)</li>
+                    <li>Tordesillas (Valladolid)</li>
+                </ul>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
     <div class="footer">
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
