--- a/Contacto/index.html
+++ b/Contacto/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="menu" id="menu">
+        <img src="../LogoFondoNegro.jpeg">
         <a href="../index.html">Inicio</a>
         <a href="../Noticias/index.html">Noticias</a>
         <a href="../Contacto/index.html" class="activa">Contacto</a>
