--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="menu" id="menu">
+        <img src="LogoFondoNegro.jpeg">
         <a href="index.html" class="activa">Inicio</a>
         <a href="Noticias/index.html">Noticias</a>
         <a href="Contacto/index.html">Contacto</a>
@@ -26,7 +27,7 @@
         Telefono: 123 456 789 | Email: nebredaracingteam@gmail.com |  Aviso legal  Privacidad y uso de cookies
     </div>
 
-    <img src="LogoFondoNegro.jpeg">
+    <img id="principal" src="LogoFondoNegro.jpeg">
 
     <script src="js/javascript.js"></script>
     
