--- a/Noticias/index.html
+++ b/Noticias/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../style.css">
     <title>Noticias</title>
 </head>
 <body>
     <div class="menu"  id="menu">
+        <img src="../LogoFondoNegro.jpeg">
         <a href="../index.html">Inicio</a>
         <a href="../Noticias/index.html" class="activa">Noticias</a>
         <a href="../Contacto/index.html">Contacto</a>
