--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -34,7 +34,7 @@
             <li>CMK:</li>
                 <ul>
                     <li>RECAS(Toledo)</li>
-                    <li></li>
+                    <li>DR7(Cuenca)</li>
                     <li></li>
                     <li></li>
                     <li></li>
