--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -35,7 +35,7 @@
                 <ul>
                     <li>RECAS(Toledo)</li>
                     <li>DR7(Cuenca)</li>
-                    <li></li>
+                    <li>Kotarr(Burgos)</li>
                     <li></li>
                     <li></li>
                 </ul>
