--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -27,6 +27,7 @@
             <li>CKCL:</li>
                 <ul>
                     <li>Cabañas Raras (Leon)</li>
+                    <img src="cabañas raras.jpg" alt="">
                     <li>Masquekarting (Burgos)</li>
                     <li>El Silvar (Leon)</li>
                     <li>Kotarr (Burgos)</li>
