He añadido las imagenes de los circuitos

--- a/Circuitos/index.html
+++ b/Circuitos/index.html
@@ -25,27 +25,68 @@
         <ul>
             <li>CKCL:</li>
                 <ul>
-                    <li>Cabañas Raras (Leon)</li>
-                    <img src="cabañas raras.jpg" alt="">
-                    <li>Masquekarting (Burgos)</li>
-                    <li>El Silvar (Leon)</li>
-                    <li>Kotarr (Burgos)</li>
-                    <li>Tordesillas (Valladolid)</li>
+                    <div id="cabañas">
+                        <img src="cabañas raras.jpg">
+                        <li>Cabañas Raras (Leon)</li>
+                    </div>
+                    <div id="masquekarting">
+                        <img src="masquekarting.jpg">
+                        <li>Masquekarting (Burgos)</li>
+                    </div>
+                    <div id="benamariel">
+                        <img src="el silvar.jpg">
+                        <li>El Silvar (Leon)</li>
+                    </div>
+                    <div class="kotarr">
+                        <img src="kotarr.jpg" alt="">
+                        <li>Kotarr (Burgos)</li>
+                    </div>
+                    <div id="tordesillas">
+                        <img src="tordesillas.jpg">
+                        <li>Tordesillas (Valladolid)</li>
+                    </div>   
                 </ul><br>
             <li>CMK:</li>
                 <ul>
-                    <li>Recas(Toledo)</li>
-                    <li>DR7(Cuenca)</li>
-                    <li>Kotarr(Burgos)</li>
-                    <li>Kotarr(Burgos)</li>
-                    <li>Recas(Toledo)</li>
+                    <div class="recas">
+                        <img src="recas.jpg">
+                        <li>Recas (Toledo)</li>
+                    </div>
+                    <div id="tarancon">
+                        <img src="dr7.jpg">
+                        <li>DR7 (Cuenca)</li>
+                    </div>
+                    <div class="kotarr">
+                        <img src="kotarr.jpg" alt="">
+                        <li>Kotarr (Burgos)</li>
+                    </div>
+                    <div class="kotarr">
+                        <img src="kotarr.jpg" alt="">
+                        <li>Kotarr (Burgos)</li>
+                    </div>
+                    <div class="recas">
+                        <img src="recas.jpg">
+                        <li>Recas (Toledo)</li>
+                    </div>
                 </ul><br>
             <li>CEK</li>
                 <ul>
-                    <li>Campillos(Malaga)</li>
-                    <li>Zuera(Zaragoza)</li>
-                    <li>Motorland(Teruel)</li>
-                    <li>Chiva(Valencia)</li>
+                    <div id="campillos">
+                        <img src="campillos.jpg">
+                        <li>Campillos (Malaga)</li>
+                    </div>
+                    <div id="zuera">
+                        <img src="zuera.jpg">
+                        <li>Zuera (Zaragoza)</li>
+                    </div>
+                    <div id="motorland">
+                        <img src="motorland.jpg">
+                        <li>Motorland (Teruel)</li>
+                    </div>
+                    <div id="chiva">
+                        <img src="chiva.jpg">
+                        <li>Chiva(Valencia)</li>
+                    </div>
                 </ul>
         </ul>
     </div>
